objects/NotificationHistory__c.object
<CustomObject>
    <label>Notification History</label>
    <pluralLabel>Notification Histories</pluralLabel>
    <nameField>
        <label>Notification History Name</label>
        <type>AutoNumber</type>
        <displayFormat>NH-{0000}</displayFormat>
    </nameField>
    <fields>
        <fullName>Notification_Type__c</fullName>
        <label>Notification Type</label>
        <type>Picklist</type>
        <picklist>
            <picklistValues>
                <fullName>New Service Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLA Reminder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Status Change</fullName>
            </picklistValues>
        </picklist>
    </fields>
    <fields>
        <fullName>Notification_Date__c</fullName>
        <label>Notification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <label>Recipient</label>
        <type>Lookup</type>
        <referenceTo>User</referenceTo>
    </fields>
</CustomObject>